css/style.css
/* ... */
.contact-form button.btn:hover {
    opacity: 0.8;
}

/* //contact form */

.copy-w3layouts-right p {
    background: #000000;
    color: #fff;

    letter-spacing: 2px;
}

.copy-w3layouts-right p a {
    color: #fff;
    margin-bottom: -30px;
}

.copy-w3layouts-right p a:hover {
    opacity: 0.8;
}

.w3pvt_social_list li {
    display: inline-block;
}

.w3pvt_social_list li a {
    width: 34px;
    height: 34px;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -o-border-radius: 50%;
    margin: 0.5em;
    background: #fff;
    display: inline-block;

}

.w3pvt_social_list li a span {
    color: #333;
    font-size: 0.9em;
    text-align: center;
    margin: 0;
    line-height: 2.5em;
}


/*--/responsive--*/
@media(max-width:1024px) {
    .tab-main {
        padding: 40px 0;
        width: 90%;
    }
}

@media(max-width:991px) {
    .popup {
        width: 40%;
    }
}

@media(max-width:800px) {
    .inner-w3layouts-wrap {
        margin: 0 auto;
        width: 90%;
        padding-top: 3em;
        text-align: center;
    }

    .banner-info {
        padding-top: 3.5em;
    }
}

@media(max-width:768px) {
    .tab-main {
        padding: 40px 0;
        width: 92%;
    }
}

@media(max-width:640px) {
    .popup {
        width: 40%;
    }

    .tab-main {
        padding: 40px 0;
        width: 95%;
    }

    .tab-main label {
        padding: 10px 18px;
    }
}

@media(max-width:480px) {

    .inner-w3layouts-wrap h2,
    .head-w3ls {
        font-size: 1.2em;
        letter-spacing: 2px;
        margin: 0em 0 1em 0;
    }

    .inner-w3layouts-wrap h4 {
        font-size: 0.9em;
        letter-spacing: 2px;
        margin: 0.5em 0 2em 0;
    }

    .tab-main label {
        padding: 10px 10px;
    }

    .tab-main span {
        margin-right: 0.2em;
    }
}

@media(max-width:414px) {
    p {
        font-size: 0.85em;

    }

    .w3pvt-logo a {
        font-size: 0.9em;
    }

    .banner-info {
        padding-top: 1.5em;
    }

    .tab-main {
        padding: 22px 0;
        width: 100%;
    }

    .tab-main label {
        padding: 6px 7px;
        font-size: 0.8em;
    }

    .contact-form textarea {
        min-height: 8.5em;
    }

    img.admin {
        padding: 0.3em;
        margin-bottom: 1em;
        width: 30%;
    }

    .inner-w3layouts-wrap {
        margin: 0 auto;
        width: 90%;
        padding-top: 2em;
    }

    form.contact-form {
        margin-top: 2em;
    }

    .contact-form button.btn {
        padding: 0.7em 2em;
        font-size: 14px;
        letter-spacing: 2px;
    }
}

/* Table formatting */
table.blueTable-1 {
  border: 1px solid #1C6EA4;
  background-color: #EEEEEE;
  width: 100%;
  text-align: center;
  font-family: 'Raleway', sans-serif;
  border-collapse: collapse;
}
table.blueTable-1 td, table.blueTable-1 th {
  font-family: 'Raleway', sans-serif;
  border: 1px solid #AAAAAA;
  padding: 3px 2px;
}
table.blueTable-1 tbody td {
  font-family: 'Raleway', sans-serif;
  font-size: 13px;
}
table.blueTable-1 tr:nth-child(even) {
  font-family: 'Raleway', sans-serif;
  background: #D0E4F5;
}
table.blueTable-1 thead {
  background: #1C6EA4;
  font-family: 'Raleway', sans-serif;
  text-align: center;
  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
  background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
  border-bottom: 2px solid #444444;
}
table.blueTable-1 thead th {
  font-family: 'Raleway', sans-serif;
  font-size: 15px;
  font-weight: bold;
  color: #FFFFFF;
  border-left: 2px solid #D0E4F5;
}
table.blueTable-1 thead th:first-child {
  border-left: none;
}

table.blueTable-1 tfoot {
  font-size: 14px;
  font-weight: bold;
  color: #FFFFFF;
  background: #D0E4F5;
  background: -moz-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
  background: -webkit-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
  background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
  border-top: 2px solid #444444;
}
table.blueTable-1 tfoot td {
  font-size: 14px;
}
table.blueTable-1 tfoot .links {
  text-align: right;
}
table.blueTable-1 tfoot .links a{
  display: inline-block;
  background: #1C6EA4;
  color: #FFFFFF;
  padding: 2px 8px;
  border-radius: 5px;
}

.current-class-1
{
    margin-top: -30px;
    font-size: 24px;
    font-family: 'Raleway', sans-serif;
    opacity: 0.9;
}

table.blueTable-2 {
    border: 1px solid #1C6EA4;
    background-color: #EEEEEE;
    width: 100%;
    text-align: center;
    font-family: 'Raleway', sans-serif;
    border-collapse: collapse;
  }
  table.blueTable-2 td, table.blueTable-2 th {
    font-family: 'Raleway', sans-serif;
    border: 1px solid #AAAAAA;
    padding: 3px 2px;
  }
  table.blueTable-2 tbody td {
    font-family: 'Raleway', sans-serif;
    font-size: 13px;
  }
  table.blueTable-2 tr:nth-child(even) {
    font-family: 'Raleway', sans-serif;
    background: #D0E4F5;
  }
  table.blueTable-2 thead {
    background: #1C6EA4;
    font-family: 'Raleway', sans-serif;
    text-align: center;
    background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
    background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
    background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
    border-bottom: 2px solid #444444;
  }
  table.blueTable-2 thead th {
    font-size: 15px;
    font-weight: bold;
    color: #FFFFFF;
    border-left: 2px solid #D0E4F5;
    font-family: 'Raleway', sans-serif;
  }
  table.blueTable-2 thead th:first-child {
    border-left: none;
  }
/* ... */

